Fix - Change link contrast and logo resolution

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -247,3 +247,7 @@
     right: 5px;
   }
 }
+
+.sr-hiden {
+  color: darken($icon-color, 20);
+}
